--- a/views/site.ejs
+++ b/views/site.ejs
@@ -8,6 +8,8 @@
 </body>
 
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+<script src='https://s3.amazonaws.com/rapidapi-prod-fe_static/rapidapi.min.js'></script>
+<script src="https://storage.googleapis.com/code-snippets/rapidapi.min.js"></script> 
 <script src="assets/webcam.js"></script>
 <script src="js/site.js"></script>
 
