--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,31 @@
 	}</style>
 </head>
 <body ng-app="different">
+		<nav class="navbar navbar-inverse	 navbar-fixed-top">
+				<div class="container-fluid">
+				  <!-- Brand and toggle get grouped for better mobile display -->
+				  <div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					  <span class="sr-only">Toggle navigation</span>
+					  <span class="icon-bar"></span>
+					  <span class="icon-bar"></span>
+					  <span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">OldWatch</a>
+				  </div>
+			  
+				  <!-- Collect the nav links, forms, and other content for toggling -->
+				  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+					  <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+					  <li><a href="/user">Add User</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+					  <li><a href="#">Logout</a></li>
+					</ul>
+				  </div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
+			</nav>
 	<ui-view></ui-view>
 	<script src="./bower_components/jquery/dist/jquery.js"></script>
 	<script src="./assets/webcam.js"></script>
@@ -20,5 +45,6 @@
 	<script src="./bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.js"></script>
 	<script src="./app.js"></script>
 	<script src="./home-controller.js"></script>
+	<script src="./user-controller.js"></script>
 </body>
 </html>
