--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,7 @@
 	<ui-view></ui-view>
 	<script src="./bower_components/jquery/dist/jquery.js"></script>
 	<script src="./assets/webcam.js"></script>
+	<script src='/socket.io/socket.io.js'></script>
 	<script src="./js/site.js"></script>
 	<script src="./bower_components/angular/angular.js"></script>
 	<script src="./bower_components/angular-resource/angular-resource.js"></script>
