--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,11 +3,12 @@
     <head>
         <link rel="stylesheet" href="./login.css"/>
       </head>
-    <body>
+      <body>
+        
     <div class="login-page">
         <div class="form">
           <form class="login-form">
-            <p>OldWatch</p>
+            <p>Old Watch (Turn your smartphone to watch your back)</p>
             <input type="text" placeholder="username"/>
             <input type="password" placeholder="password"/>
             <button onClick="window.open('/');">login</button>
