--- a/views/remote.ejs
+++ b/views/remote.ejs
@@ -1,12 +1,48 @@
 <html>
-
-<body>
-	<button id="start">Start</button>
-
-	<button id="stop">Stop</button>
+<base href="/">
+<head>
+	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css"/>
+	<link rel="stylesheet" href="./bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.css"/>
+	<style type="text/css">
+	[ng\:cloak], [ng-cloak], .ng-cloak {
+	display: none !important;
+	}</style>
+</head>
+<body ng-app="remote">
+		<nav class="navbar navbar-inverse	 navbar-fixed-top">
+				<div class="container-fluid">
+				  <!-- Brand and toggle get grouped for better mobile display -->
+				  <div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					  <span class="sr-only">Toggle navigation</span>
+					  <span class="icon-bar"></span>
+					  <span class="icon-bar"></span>
+					  <span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">OldWatch</a>
+				  </div>
+			  
+				  <!-- Collect the nav links, forms, and other content for toggling -->
+				  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+					  <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+					  <li><a href="/user">Add User</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+					  <li><a href="#">Logout</a></li>
+					</ul>
+				  </div><!-- /.navbar-collapse -->
+				</div><!-- /.container-fluid -->
+			</nav>
+	<ui-view></ui-view>
+	<script src="./bower_components/jquery/dist/jquery.js"></script>
+	<script src="./bower_components/angular/angular.js"></script>
+	<script src="./bower_components/angular-resource/angular-resource.js"></script>
+	<script src="./bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+	<script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+	<script src="./bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.js"></script>
+	<script src='/socket.io/socket.io.js'></script>
+	<script src="./remote.js"></script>
+	<script src="./remote-controller.js"></script>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src='/socket.io/socket.io.js'></script>
-<script src="./remote2.js"></script>
-
 </html>
