--- a/views/remote.ejs
+++ b/views/remote.ejs
@@ -25,7 +25,7 @@
 				  <!-- Collect the nav links, forms, and other content for toggling -->
 				  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-					  <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+					  <li class="active"><a href="/" onClick="window.open('/');">Home<span class="sr-only">(current)</span></a></li>
 					  <li><a href="/user">Add User</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
