--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <div class="login-page">
         <div class="form">
           <form class="login-form">
-            <p>Old Watch (Turn your smartphone to watch your back)</p>
+            <p><b>Free-Watch</b> (Turn your smartphone to watch your back)</p>
             <input type="text" placeholder="username"/>
             <input type="password" placeholder="password"/>
             <button onClick="window.open('/');">login</button>
