--- a/public/login.css
+++ b/public/login.css
@@ -89,7 +89,7 @@
   color: #EF3B3A;
 }
 body {
-  background-image: url(./assets/bg-image.jpg);
+  background-image: url(./assets/secbk.jpg);
   background-size: cover;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
