--- a/views/remote.ejs
+++ b/views/remote.ejs
@@ -26,7 +26,7 @@
 				  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 					  <li class="active"><a href="/" onClick="window.open('/');">Home<span class="sr-only">(current)</span></a></li>
-					  <li><a href="/user">Add User</a></li>
+					  <li><a href="#" onClick="window.open('/user');">Add User</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 					  <li><a href="#">Logout</a></li>
