Linking login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,11 +8,11 @@
     <div class="login-page">
         <div class="form">
           <form class="login-form">
-            <p><b>Free-Watch</b> (Turn your smartphone to watch your back)</p>
+            <p><b>Free-Watch</b></br></p>(Turn your old smartphone into a surveillance camera)</p>
             <input type="text" placeholder="username"/>
             <input type="password" placeholder="password"/>
             <button onClick="window.open('/');">login</button>
-            <p class="message">Not registered? <a href="#">Create an account</a></p>
+            <p class="message">Not registered? <a href="#" onClick="window.open('/user');">Create an account</a></p>
           </form>
         </div>
       </div>
